fix sticky header and tables covering modal menus

--- a/src/style.css
+++ b/src/style.css
@@ -51,6 +51,6 @@
 		border-spacing: 0;
 	}
 	.sticky-header th {
-		@apply sticky top-0 bg-white z-10 border-b border-gray-300;
+		@apply sticky top-0 bg-white border-b border-gray-300;
 	}
 }
